skims/test/data/lib_root/f024/cfn_ec2_groups_without_egress.yaml
---
Resources:
  securityGroup1:
    Properties:
      GroupDescription: groupDescription1
      SecurityGroupIngress:
        - CidrIp: 34.229.161.227/16
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
      SecurityGroupEgress:
        - CidrIp: 34.229.161.227/16
          FromPort: 8080
          IpProtocol: tcp
          ToPort: 8080
    Type: AWS::EC2::SecurityGroup
  securityGroup2:
    Properties:
      GroupDescription: groupDescription1
      SecurityGroupIngress:
        - CidrIp: 34.229.161.227/16
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443

    Type: AWS::EC2::SecurityGroup
